# Golfer-problem-simulated-annealing

./: .gitignore  LICENSE  README.md
CMakeGolferProblem/: CMakeLists.txt
CMakeGolferProblem/GolferProblem/: CMakeLists.txt
CMakeGolferProblem/GolferProblem/include/: GolferProblem.h  solver.h  util.h
CMakeGolferProblem/GolferProblem/results/: gridsearch.txt  gridsearch_cont.txt  results.txt  results_cont.txt  results_range.txt
CMakeGolferProblem/GolferProblem/source/: GolferProblem.cpp  main.cpp  solver.cpp  util.cpp
